fix: height issue on mobile

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html {
 
 body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   color: var(--color-dark);
   background-image: linear-gradient(var(--color-primary), var(--color-light));
   font-family: "Lato", sans-serif;
